; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_flow_divert.c_flow_divert_pcb_lookup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_flow_divert.c_flow_divert_pcb_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flow_divert_pcb = type { i32 }
%struct.flow_divert_group = type { i32, i32 }

@fd_pcb_tree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.flow_divert_pcb* (i32, %struct.flow_divert_group*)* @flow_divert_pcb_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.flow_divert_pcb* @flow_divert_pcb_lookup(i32 %0, %struct.flow_divert_group* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.flow_divert_group*, align 8
  %5 = alloca %struct.flow_divert_pcb, align 4
  %6 = alloca %struct.flow_divert_pcb*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.flow_divert_group* %1, %struct.flow_divert_group** %4, align 8
  store %struct.flow_divert_pcb* null, %struct.flow_divert_pcb** %6, align 8
  %7 = load i32, i32* %3, align 4
  %8 = getelementptr inbounds %struct.flow_divert_pcb, %struct.flow_divert_pcb* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = load %struct.flow_divert_group*, %struct.flow_divert_group** %4, align 8
  %10 = getelementptr inbounds %struct.flow_divert_group, %struct.flow_divert_group* %9, i32 0, i32 0
  %11 = call i32 @lck_rw_lock_shared(i32* %10)
  %12 = load i32, i32* @fd_pcb_tree, align 4
  %13 = load %struct.flow_divert_group*, %struct.flow_divert_group** %4, align 8
  %14 = getelementptr inbounds %struct.flow_divert_group, %struct.flow_divert_group* %13, i32 0, i32 1
  %15 = call %struct.flow_divert_pcb* @RB_FIND(i32 %12, i32* %14, %struct.flow_divert_pcb* %5)
  store %struct.flow_divert_pcb* %15, %struct.flow_divert_pcb** %6, align 8
  %16 = load %struct.flow_divert_pcb*, %struct.flow_divert_pcb** %6, align 8
  %17 = call i32 @FDRETAIN(%struct.flow_divert_pcb* %16)
  %18 = load %struct.flow_divert_group*, %struct.flow_divert_group** %4, align 8
  %19 = getelementptr inbounds %struct.flow_divert_group, %struct.flow_divert_group* %18, i32 0, i32 0
  %20 = call i32 @lck_rw_done(i32* %19)
  %21 = load %struct.flow_divert_pcb*, %struct.flow_divert_pcb** %6, align 8
  ret %struct.flow_divert_pcb* %21
}

declare dso_local i32 @lck_rw_lock_shared(i32*) #1

declare dso_local %struct.flow_divert_pcb* @RB_FIND(i32, i32*, %struct.flow_divert_pcb*) #1

declare dso_local i32 @FDRETAIN(%struct.flow_divert_pcb*) #1

declare dso_local i32 @lck_rw_done(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
